# mumpspy

./: LICENSE  README.md  mumpspy.py  mumpspy_test.py  pyproject.toml  setup.py  setyp.py
.github/workflows/: CI-Macos_tests.yml  CI-Ubuntu_tests.yml  CI-tests.yml
mumpspy/: __init__.py  mumps_lib_c_struc.py  mumpspy.py
mumpspy/test/: mumpspy_test.py
src/: __init__.py  mumps_lib_c_struc.py  mumpspy.py  mumpspy_test.py
