[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mumpspy"]

[tool.setuptools.dynamic]
version = {attr = "mumpspy.__version__"}

[project.urls]
homepage = "https://github.com/vlukes/mumpspy"

[project]
name = "mumpspy"
dynamic = ["version"]
readme = "README.md"
description="MUMPS for Python"
license = {file = "LICENSE"}
authors = [{name = "Vladimír Lukeš", email = "vlukes@kme.zcu.cz"}]
requires-python = ">= 3.8"
dependencies = ["mpi4py", "numpy"]
keywords = ["sparse", "solver"]
classifiers = [
    "Development Status :: 4 - Beta",  # 3 - Alpha, 4 - Beta, 5 - Stable
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
]
